--- a/docking-examples/pom.xml
+++ b/docking-examples/pom.xml
@@ -14,6 +14,12 @@
 
 		<dependency>
 			<groupId>com.metsci.glimpse</groupId>
+			<artifactId>glimpse-wheelfix</artifactId>
+			<version>${parent.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.metsci.glimpse</groupId>
 			<artifactId>glimpse-docking</artifactId>
 			<version>${parent.version}</version>
 		</dependency>
