--- a/docking/pom.xml
+++ b/docking/pom.xml
@@ -13,6 +13,12 @@
 
         <dependency>
             <groupId>com.metsci.glimpse</groupId>
+            <artifactId>glimpse-util</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.metsci.glimpse</groupId>
             <artifactId>glimpse-extras-tinylaf</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
