Use transitive in module-info.java

--- a/docking-examples/pom.xml
+++ b/docking-examples/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>glimpse-core-examples</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.metsci.glimpse</groupId>
+            <artifactId>glimpse-core</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
 
     </dependencies>
 
