--- a/docking/pom.xml
+++ b/docking/pom.xml
@@ -1,28 +1,48 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.metsci.glimpse</groupId>
-        <artifactId>glimpse-parent</artifactId>
-        <version>CURRENT-SNAPSHOT</version>
-    </parent>
+	<parent>
+		<groupId>com.metsci.glimpse</groupId>
+		<artifactId>glimpse-parent</artifactId>
+		<version>CURRENT-SNAPSHOT</version>
+	</parent>
 
-    <artifactId>glimpse-docking</artifactId>
+	<artifactId>glimpse-docking</artifactId>
 
-    <dependencies>
+	<dependencies>
 
-        <dependency>
-            <groupId>com.metsci.glimpse</groupId>
-            <artifactId>glimpse-util</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
+		<dependency>
+			<groupId>com.metsci.glimpse</groupId>
+			<artifactId>glimpse-util</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
 
-        <dependency>
-            <groupId>com.metsci.glimpse</groupId>
-            <artifactId>glimpse-extras-tinylaf</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
+		<dependency>
+			<groupId>com.metsci.glimpse</groupId>
+			<artifactId>glimpse-extras-tinylaf</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
 
-    </dependencies>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-core</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+
+	</dependencies>
 
 </project>
