--- a/docking/pom.xml
+++ b/docking/pom.xml
@@ -1,61 +1,35 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>com.metsci.glimpse</groupId>
-		<artifactId>glimpse-parent</artifactId>
-		<version>CURRENT-SNAPSHOT</version>
-	</parent>
+    <parent>
+        <groupId>com.metsci.glimpse</groupId>
+        <artifactId>glimpse-parent</artifactId>
+        <version>CURRENT-SNAPSHOT</version>
+    </parent>
 
-	<artifactId>glimpse-docking</artifactId>
+    <artifactId>glimpse-docking</artifactId>
 
-
-	<!-- Temporary fix: https://github.com/javaee/jaxb-v2/issues/1168 -->
-    <repositories>
-        <repository>
-            <id>releases.java.net</id>
-            <url>http://maven.java.net/content/repositories/releases/</url>
-            <layout>default</layout>
-        </repository>
-        <repository>
-            <id>jvnet-nexus-staging</id>
-            <url>http://maven.java.net/content/repositories/staging/</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
-
-	<dependencies>
-
-		<dependency>
-			<groupId>com.metsci.glimpse</groupId>
-			<artifactId>glimpse-util</artifactId>
-			<version>${project.parent.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.metsci.glimpse</groupId>
-			<artifactId>glimpse-extras-tinylaf</artifactId>
-			<version>${project.parent.version}</version>
-		</dependency>
-
-       <dependency>
+    <dependencies>
+        <dependency>
+            <groupId>com.metsci.glimpse</groupId>
+            <artifactId>glimpse-util</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.metsci.glimpse</groupId>
+            <artifactId>glimpse-extras-tinylaf</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
-            <version>2.4.0-b180608.0325</version>
+            <version>2.3.2</version>
         </dependency>
-        <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-xjc</artifactId>
-            <version>2.4.0-b180608.0325</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-jxc</artifactId>
-            <version>2.4.0-b180608.0325</version>
-        </dependency>
-
-	</dependencies>
+    </dependencies>
 
 </project>
