--- a/docking-examples/pom.xml
+++ b/docking-examples/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.metsci.glimpse</groupId>
         <artifactId>glimpse-parent</artifactId>
-        <version>CURRENT-SNAPSHOT</version>
+        <version>4.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>glimpse-docking-examples</artifactId>
